--- a/config/config.ini
+++ b/config/config.ini
@@ -4,18 +4,21 @@ offset = 130376.3
 calibrated = 1
 
 [INTERVAL]
-median = 5
-wait_time_seconds = 5
+median = 3
+wait_time_seconds = 3
 
 [INFORMATION]
-country_code = "0"
-zip_code = "0"
+country_code = "DE"
+zip_code = "37139"
 id = "0"
+hive = "234"
+hash = "43453453"
+ready = 0
 
 [DHT22]
-sensor_1 = 21
+pin = 21
 
 [AUDIO]
-duration = 10
+duration = 4
 fs = 44100
 nWindow = 2^12
