--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-notifier": "^1.5.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-resource": "^1.5.1"
