--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.17",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "vuejs-dialog": "^1.3.0"
   }
 }
