--- a/config/config.ini
+++ b/config/config.ini
@@ -1,3 +1,6 @@
+[DEFAULT]
+token = 0
+
 [SCALE]
 ratio = 14.94767
 offset = 130376.3
@@ -22,3 +25,4 @@ pin = 21
 duration = 4
 fs = 44100
 nWindow = 2^12
+
