--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "que",
+  "name": "sams",
   "version": "0.1.0",
   "author": "anderswodenker <handeln@anderswodenker.de>",
   "license": "MIT",
