--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ numpy==1.15.4
 pycparser==2.19
 pyparsing==2.3.0
 python-dateutil==2.7.5
+pytz==2018.9
 requests==2.20.1
 scipy==1.1.0
 six==1.12.0
 sounddevice==0.3.12
+SoundFile==0.10.2
 urllib3==1.24.1
 Werkzeug==0.14.1
