--- a/config/config.ini
+++ b/config/config.ini
@@ -9,20 +9,12 @@ calibrated = 1
 [INTERVAL]
 median = 3
 wait_time_seconds = 3
-
-[INFORMATION]
-country_code = "DE"
-zip_code = "37139"
-id = "0"
-hive = "234"
-hash = "43453453"
-ready = 0
+repost_seconds = 120
+app_wait_seconds = 900
 
 [DHT22]
 pin = 21
 
 [AUDIO]
 duration = 4
-fs = 44100
-nWindow = 2^12
 
